--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 			</section>
 
 		</main>
+		<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 		<script src="test.js"></script>
 	</body>
 </html>
