--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 		<title>M4103C-Projet-JS - Recherche d'offres d'emploi</title>
 		<meta charset="utf-8">
 		<link rel="shortcut icon" type="image/x-icon" href="favicon-js.ico">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 		<link rel="stylesheet" href="styles.css">
+		
+
 	</head>
 	<body>
 		<header>
@@ -79,6 +82,7 @@
 
 		</main>
 		<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 		<script src="test.js"></script>
 	</body>
 </html>
