--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 						<img src="images/loupe.svg" alt="Loupe pour recherche" width=22 >
 					</button>
 
-					<button id="btn-favoris" type="button" disabled
-					title="Ajouter la recherche aux favoris">
+					<button id="btn-favoris" type="button"
+					title="Ajouter la recherche aux favoris" onclick="addFavori(this)">
 						<!-- Icone étoile vide => Recherche pas en favoris -->
 						<img src="images/etoile-vide.svg" alt="Etoile vide" width=22 >
 
@@ -59,21 +59,20 @@
 				<h2>Recherches favorites</h2>
 				<p>Cliquer sur une recherche favorite ci-dessus pour relancer celle-ci :</p>
 				<ul id="liste-favoris">
-					<li>
-						<span title="Cliquer pour relancer la recherche">Grenoble</span>
-						<img src="images/croix.svg" alt="Icone pour supprimer le favori" width=15 title="Cliquer pour supprimer le favori">
-					</li>
-					<li>
-						<span title="Cliquer pour relancer la recherche">Lyon</span>
-						<img src="images/croix.svg" alt="Icone pour supprimer le favori" width=15 title="Cliquer pour supprimer le favori">
-					</li>
-					<li>
-						<span title="Cliquer pour relancer la recherhe.">Web</span>
-						<img src="images/croix.svg" alt="Icone pour supprimer le favori" width=15 title="Cliquer pour supprimer le favori">
-					</li>
+					
 				</ul>
-				<p class="info-vide">( &empty; Aucune recherche enregistrée )</p>
+				<hr />
+				<section id="section-series-favorites">
+					<h2>Séries favorites</h2>
+					<p>Cliquer sur une série favorite ci-dessus pour l'afficher:</p>
+					<ul id="liste-series-favorites">
+						
+					</ul>
+				</section>
 			</section>
+
+			
+			
 
 		</main>
 		<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
