Affichage bien des différents shows

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<header>
 			<h1>Recherche d'offres d'emploi</h1>
 
-			<p id="explication">Cette page permet de rechercher des offres d'emploi via l'API publique de <a href="https://www.indeed.fr/" target="_blank">indeed.fr</a>.<br>
-			Saisir le nom d'une ville, d'un poste, ... pour rechercher les postes correspondants, et enregistrer vos recherches favorites pour les retrouver facilement.</p>
+			<p id="explication">Cette page permet de rechercher des shows via l'API publique de <a href="https://catchtheshow.herokuapp.com/api/documentation" target="_blank">CatchTheShow</a>.<br>
+			Saisir le nom d'une série, d'un anime, ... pour en apprendre plus sur le show, et enregistrer vos recherches favorites pour les retrouver facilement.</p>
 		</header>
 		<hr>
 
@@ -64,7 +64,7 @@
 				<hr />
 				<section id="section-series-favorites">
 					<h2>Séries favorites</h2>
-					<p>Cliquer sur une série favorite ci-dessus pour l'afficher:</p>
+					<p>Cliquer sur une série favorite ci-dessus pour l'afficher :</p>
 					<ul id="liste-series-favorites">
 						
 					</ul>
