Revert "Affichage chargement"
This reverts commit 2552bebedb3919f50eefbada18fa5531f76bbeb6.

--- a/index.html
+++ b/index.html
@@ -42,12 +42,10 @@
 						<!-- (Icones provenant de flaticon.com) -->
 					</button>
 				</div>
-				<div id="prediction">
-				</div>
+				<div id="prediction"></div>
 				<!-- Résultats de recherche -->
 				<div id="bloc-gif-attente">
 					<img src='images/attente-ajax.gif' alt="GIF Attente de résultats" width=50 />
-					<p>Affichage des résultats....</p>
 				</div>
 				<div id="bloc-resultats">
 				</div>
