--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<h1>Recherche ton show</h1>
 
 			<p id="explication">Cette page permet de rechercher des shows via l'API publique de <a href="https://catchtheshow.herokuapp.com/api/documentation" target="_blank">CatchTheShow</a>.<br>
-			Saisir le nom d'une série, d'un anime, ... pour en apprendre plus sur le show, et enregistrer vos recherches favorites pour les retrouver facilement.</p>
+			Saisir le nom d'une série, d'un anime, ... pour en apprendre plus sur le show, et enregistrer vos recherches et séries favorites pour les retrouver facilement.</p>
 		</header>
 		<hr>
 
