--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 					</button>
 
 					<button id="btn-favoris" type="button"
-					title="Ajouter la recherche aux favoris" onclick="addFavori(this)">
+					title="Ajouter la recherche aux favoris" >
 						<!-- Icone étoile vide => Recherche pas en favoris -->
-						<img src="images/etoile-vide.svg" alt="Etoile vide" width=22 >
+						<img id="btn-favoris-img" src="images/etoile-vide.svg" alt="Etoile vide" width=22 >
 
 						<!-- Icone étoile pleine => Recherche en favoris -->
 						<!-- <img src="images/etoile-pleine.svg" alt="Etoile pleine" width=22 > -->
